--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -27,7 +27,7 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/menu/">Menu</a></li>
+                <li><a href="http://beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
@@ -237,6 +237,12 @@
                     <a class="close-reveal-modal">&#215;</a>
                 </div>
                 <article class="row">
+                    <div class="medium-12 large-12 columns extra-space-recensione">
+                        <h4><em>Un tocco di New York tra le splendide colline marchigiane</em></h4>
+                        <h6 class="by-line-chi-siamo">Scritto il 1 Giugno 2015</h6>  
+                        <blockquote cite="">Il posto è favoloso,già lo conoscevo da un anno.Completamente immerso nella campagna marchigiana,in un ambiente integrato nella natura.<br>Specializzato in cucina "americana" abbiamo mangiato degli ottimi hamburger (che ci hanno riportato con la testa a quelli newyorkesi e non ai classici panini da pub). Ottimi anche i peperoncini ripieni(piccantissimi come piacciono a noi). Grande selezione di birra e prezzo molto più che ragionevole.<br>Sicuramente ritorneremo per provare gli altri tipi di hamburger e le alette di pollo fritte.<br>Noi amanti di New York abbiamo finalmente trovato un posto che con i sapori ci riporta alla Grande Mela.<br>Bravi!<cite>Lallicori</cite></blockquote>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r276986362-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS" target="_blank">Leggi l'originale</a>
+                    </div>
                     <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Beerstrot Fantastico... birre al TOP</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 27 Maggio 2015</h6>  
@@ -484,7 +490,7 @@
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
                 <a href="http://beerstrot.it">Home</a>
-                <a href="http://beerstrot.it/menu/">Menu</a>
+                <a href="http://beerstrot.it/menu/">Menù</a>
                 <a href="http://beerstrot.it/eventi/">Eventi</a>
                 <a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a>
                 <a href="http://beerstrot.it/contatti/">Contatti</a>
