--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li><a href="http://beerstrot.it/menu/">Menu</a></li>
+                <li><a href="http://beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
@@ -273,7 +273,7 @@
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
                 <a href="http://beerstrot.it">Home</a>
-                <a href="http://beerstrot.it/menu/">Menu</a>
+                <a href="http://beerstrot.it/menu/">Menù</a>
                 <a href="http://beerstrot.it/eventi/">Eventi</a>
                 <a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a>
                 <a href="http://beerstrot.it/contatti/">Contatti</a>
