--- a/menu/index.html
+++ b/menu/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
-    <title>Beerstrot | Menu</title>
+    <title>Beerstrot | Menù</title>
     <meta name="description" content="Riscopri i sapori con il nostro menu. Birre artigianali e piatti di alta cucina per tutti."/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
@@ -27,7 +27,7 @@
         <section class="top-bar-section">
             <ul class="right">
                 <li class="divider"></li>
-                <li class="active"><a href="http://beerstrot.it/menu/">Menu</a></li>
+                <li class="active"><a href="http://beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
                 <li><a href="http://beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
@@ -578,7 +578,7 @@
         <div class="small-12 medium-12 large-12 columns">
             <p class="links">
                 <a href="http://beerstrot.it">Home</a>
-                <a href="http://beerstrot.it/menu/">Menu</a>
+                <a href="http://beerstrot.it/menu/">Menù</a>
                 <a href="http://beerstrot.it/eventi/">Eventi</a>
                 <a href="http://beerstrot.it/chi-siamo/">Chi&nbsp;Siamo</a>
                 <a href="http://beerstrot.it/contatti/">Contatti</a>
