--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -238,6 +238,12 @@
                 </div>
                 <article class="row">
                     <div class="medium-12 large-12 columns extra-space-recensione">
+                        <h4><em>Ne vale la pena......</em></h4>
+                        <h6 class="by-line-chi-siamo">Scritto il 2 Giugno 2015</h6>  
+                        <blockquote cite="">Si ...arrivare lì non è facile ma ne vale la pena: cibo buonissimo, le costine poi strepitose, panorama incantevole e ragazzi simpaticissimi ......a presto!<cite>Clara S</cite></blockquote>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r277190049-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS" target="_blank">Leggi l'originale</a>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Un tocco di New York tra le splendide colline marchigiane</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 1 Giugno 2015</h6>  
                         <blockquote cite="">Il posto è favoloso,già lo conoscevo da un anno.Completamente immerso nella campagna marchigiana,in un ambiente integrato nella natura.<br>Specializzato in cucina "americana" abbiamo mangiato degli ottimi hamburger (che ci hanno riportato con la testa a quelli newyorkesi e non ai classici panini da pub). Ottimi anche i peperoncini ripieni(piccantissimi come piacciono a noi). Grande selezione di birra e prezzo molto più che ragionevole.<br>Sicuramente ritorneremo per provare gli altri tipi di hamburger e le alette di pollo fritte.<br>Noi amanti di New York abbiamo finalmente trovato un posto che con i sapori ci riporta alla Grande Mela.<br>Bravi!<cite>Lallicori</cite></blockquote>
