--- a/menu/index.html
+++ b/menu/index.html
@@ -171,7 +171,7 @@
                         <h2 class="subheader">Dolci<br><small>Fatti in casa</small></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/beeramisu.html">Birramisù<span class="right">5,5</span></a></h3>
+                                <h3><a href="http://beerstrot.it/menu/cibo/birramisu.html">Birramisù<span class="right">5,5</span></a></h3>
                                 <p>Tiramisù alla birra stout</p>
                             </li>
                             <li>
