--- a/menu/cibo/birramisu.html
+++ b/menu/cibo/birramisu.html
@@ -69,7 +69,7 @@
             <h2>Morbido e cremoso</h2>
             <p>Tiramisù alla birra stout, servito fresco in modo da gustare a fondo tutti i sapori del mascarpone e dei biscotti. Il retrogusto amaro dolce della birra stout rende il tutto sublime.</p>
             <h2>Con cosa assaggiarla</h2>
-            <p>Gustalo assieme a una delle nostre birre stout. Puoi scegliere fra oltre 8 birre, dalle belghe alle americane passando dall'Irlanda e dalla Scozia</p>  
+            <p>Gustalo assieme a una delle nostre birre stout. Puoi scegliere fra oltre 8 birre: dalle belghe alle americane, passando dall'Irlanda e dalla Scozia.</p>  
         </div>
     </div>
 <!-- fine articolo -->
