--- a/chi-siamo/index.html
+++ b/chi-siamo/index.html
@@ -238,6 +238,12 @@
                 </div>
                 <article class="row">
                     <div class="medium-12 large-12 columns extra-space-recensione">
+                        <h4><em>Beerstrot... va la pena addentrarsi nelle colline per provarlo!</em></h4>
+                        <h6 class="by-line-chi-siamo">Scritto il 2 Giugno 2015</h6>  
+                        <blockquote cite="">Un posto per cui vale la pena addentrarsi nelle colline marchigiane. Un luogo da gustare, in tutti i suoi aspetti: panorama mozzafiato, da vivere in totale relax, esperienza gastronomica davvero originale, cortesia e simpatia degli osti! Tutto davvero ottimo!<br>Da provare e ripetere!!<cite>Giulia Caramaschi</cite></blockquote>
+                        <a href="http://www.tripadvisor.com/ShowUserReviews-g1587889-d2373449-r277449519-Ca_Vecchia_Beerstrot-Filottrano_Province_of_Ancona_Marche.html#REVIEWS">Leggi l'originale</a>
+                    </div>
+                    <div class="medium-12 large-12 columns extra-space-recensione">
                         <h4><em>Ne vale la pena......</em></h4>
                         <h6 class="by-line-chi-siamo">Scritto il 2 Giugno 2015</h6>  
                         <blockquote cite="">Si ...arrivare lì non è facile ma ne vale la pena: cibo buonissimo, le costine poi strepitose, panorama incantevole e ragazzi simpaticissimi ......a presto!<cite>Clara S</cite></blockquote>
