--- a/menu/cibo/birramisu.html
+++ b/menu/cibo/birramisu.html
@@ -59,7 +59,7 @@
                 <div class="row">
                     <div class="medium-12 large-12 columns">
                         <h1>Birramisù</h1>
-                        <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 10 Aprile 2015</h6>
+                        <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 4 Giugno 2015</h6>
                         <h6 class="by-line">foto <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                     </div>
                 </div>
