--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </header>
     <div class="row">
-        <div class="small-12 small-centered columns extra-space text-center">
+        <div class="small-12 small-centered column extra-space text-center">
             <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
                 <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV text-center">
                     <li id="z9IAd7Fg" class="477A3RpAP8">
