--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
             </div>
         </div>
     </header>
-    <div class="row">
-        <div class="small-12 small-centered column extra-space text-center">
-            <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
+    <div class="row text-center">
+        <div class="small-12 extra-space text-center">
+            <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite text-center">
                 <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV text-center">
-                    <li id="z9IAd7Fg" class="477A3RpAP8">
-                        <a target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
+                    <li id="z9IAd7Fg" class="477A3RpAP8 text-center">
+                        <a class="text-center" target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
                     </li>
                 </ul>
             </div>
