--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
             </div>
         </div>
         <div class="row">
-            <div class="small-12 columns show-for-small-only extra-space clearfix ">
-                <a role="button" href="tel:+390718853384" class="button small left extra-space-button"><i class="fi-telephone"></i> Prenota</a>
+            <div class="small-12 columns show-for-small-only extra-space ">
+                <a class="tripadvisor-align" role="button" href="tel:+390718853384" class="button small left extra-space-button"><i class="fi-telephone"></i> Prenota</a>
                 <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Dove Siamo</a>
             </div>
         </div>
     </header>
-    <div class="row text-center">
-        <div class="small-12 extra-space text-center">
-            <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite text-center">
+    <div class="row">
+        <div class="small-12 extra-space">
+            <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
                 <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV text-center">
                     <li id="z9IAd7Fg" class="477A3RpAP8 text-center">
-                        <a class="text-center" target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
+                        <a target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
                     </li>
                 </ul>
             </div>
