--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="row">
         <div class="small-12 small-centered columns extra-space text-center">
             <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
-                <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV text-center">
+                <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV text-center in-line">
                     <li id="z9IAd7Fg" class="477A3RpAP8">
                         <a class="text-center" target="_blank" href="http://www.tripadvisor.it/"><img class="text-center" src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
                     </li>
