--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Dove Siamo</a>
             </div>
         </div>
-        <div class="row">
-            <div class="small-4 small-centered columns hide-for-small extra-space clearfix">
+        <div class="row hide-for-small">
+            <div class="small-4 small-centered columns extra-space clearfix">
                 <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
                     <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV">
                         <li id="z9IAd7Fg" class="477A3RpAP8">
@@ -78,8 +78,8 @@
             </div>
         </div>
     </header>
-    <div class="row">
-        <div class="small-9 small-centered columns extra-space show-for-small">
+    <div class="row show-for-small-only">
+        <div class="small-9 small-centered columns extra-space clearfix">
             <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
                 <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV">
                     <li id="z9IAd7Fg" class="477A3RpAP8">
