--- a/index.html
+++ b/index.html
@@ -79,16 +79,14 @@
         </div>
     </header>
     <div class="row show-for-small-only">
-        <div class="small-9 small-centered columns extra-space clearfix">
-            <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
-                <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV">
-                    <li id="z9IAd7Fg" class="477A3RpAP8">
-                        <a target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
-                    </li>
-                </ul>
-            </div>
-            <script src="http://www.jscache.com/wejs?wtype=restaurantWidgetWhite&amp;uniq=525&amp;locationId=2373449&amp;icon=knifeAndFork&amp;lang=it&amp;display_version=2"></script>
+        <div id="TA_restaurantWidgetWhite295" class="TA_restaurantWidgetWhite small-9 small-centered columns extra-space clearfix">
+            <ul id="kfMMh5hT3wH" class="TA_links SInnud">
+                <li id="MNwNCO9" class="xvMWDxscn">
+                    <a target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
+                </li>
+            </ul>
         </div>
+        <script src="http://www.jscache.com/wejs?wtype=restaurantWidgetWhite&amp;uniq=295&amp;locationId=2373449&amp;icon=knifeAndFork&amp;lang=it&amp;display_version=2"></script>
     </div>
 <!-- fine header -->
     <div class="panel-home-n">
