--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             </div>
         </div>
         <div class="row hide-for-small">
-            <div class="small-4 small-centered columns extra-space clearfix">
+            <div class="small-12 small-centered columns extra-space clearfix">
                 <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
                     <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV">
                         <li id="z9IAd7Fg" class="477A3RpAP8">
-                            <a target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
+                            <a class="text-center" target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
                         </li>
                     </ul>
                 </div>
@@ -79,7 +79,7 @@
         </div>
     </header>
     <div class="row show-for-small-only">
-        <div id="TA_restaurantWidgetWhite295" class="TA_restaurantWidgetWhite small-9 small-centered columns extra-space clearfix">
+        <div id="TA_restaurantWidgetWhite295" class="TA_restaurantWidgetWhite small-8 small-centered columns extra-space clearfix">
             <ul id="kfMMh5hT3wH" class="TA_links SInnud">
                 <li id="MNwNCO9" class="xvMWDxscn">
                     <a target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
