--- a/index.html
+++ b/index.html
@@ -66,28 +66,54 @@
             </div>
         </div>
         <div class="row hide-for-small">
-            <div class="small-12 small-centered columns extra-space clearfix">
-                <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
-                    <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV">
-                        <li id="z9IAd7Fg" class="477A3RpAP8">
-                            <a class="text-center" target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
-                        </li>
-                    </ul>
-                </div>
-                <script src="http://www.jscache.com/wejs?wtype=restaurantWidgetWhite&amp;uniq=525&amp;locationId=2373449&amp;icon=knifeAndFork&amp;lang=it&amp;display_version=2"></script>
+            <div class="small-12 columns extra-space clearfix">
+                <ul class="small-block-grid-2">
+                    <li>
+                        <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
+                        <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV">
+                            <li id="z9IAd7Fg" class="477A3RpAP8">
+                                <a class="text-center" target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
+                            </li>
+                        </ul>
+                        </div>
+                        <script
+                            src="http://www.jscache.com/wejs?wtype=restaurantWidgetWhite&amp;uniq=525&amp;locationId=2373449&amp;icon=knifeAndFork&amp;lang=it&amp;display_version=2">
+                        </script>
+                    </li>
+                    <li>
+                        <div class="fb-share-button" data-href="https://facebook.com/cavecchiabeerstrot" data-layout="box_count"></div>
+                        <div id="fb-root"></div>
+                        <script>(function(d, s, id) {var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) return;js = d.createElement(s); js.id = id;js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=1549149915357715";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));
+                        </script>
+                    </li>
+                <ul>
             </div>
         </div>
     </header>
-    <div class="row show-for-small-only">
-        <div id="TA_restaurantWidgetWhite295" class="TA_restaurantWidgetWhite small-8 small-centered columns extra-space clearfix">
-            <ul id="kfMMh5hT3wH" class="TA_links SInnud">
-                <li id="MNwNCO9" class="xvMWDxscn">
-                    <a target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
-                </li>
-            </ul>
+    <div class="row show-for-small">
+            <div class="small-12 columns extra-space clearfix">
+                <ul class="small-block-grid-2">
+                    <li>
+                        <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
+                        <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV">
+                            <li id="z9IAd7Fg" class="477A3RpAP8">
+                                <a class="text-center" target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
+                            </li>
+                        </ul>
+                        </div>
+                        <script
+                            src="http://www.jscache.com/wejs?wtype=restaurantWidgetWhite&amp;uniq=525&amp;locationId=2373449&amp;icon=knifeAndFork&amp;lang=it&amp;display_version=2">
+                        </script>
+                    </li>
+                    <li>
+                        <div class="fb-share-button" data-href="https://facebook.com/cavecchiabeerstrot" data-layout="box_count"></div>
+                        <div id="fb-root"></div>
+                        <script>(function(d, s, id) {var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) return;js = d.createElement(s); js.id = id;js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=1549149915357715";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));
+                        </script>
+                    </li>
+                <ul>
+            </div>
         </div>
-        <script src="http://www.jscache.com/wejs?wtype=restaurantWidgetWhite&amp;uniq=295&amp;locationId=2373449&amp;icon=knifeAndFork&amp;lang=it&amp;display_version=2"></script>
-    </div>
 <!-- fine header -->
     <div class="panel-home-n">
         <div class="row">
