--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                 <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Dove Siamo</a>
             </div>
         </div>
-        <div class="row hide-for-small">
-            <div class="small-12 columns extra-space clearfix">
-                <ul class="small-block-grid-2">
+        <div class="row hide-for-small  extra-space">
+            <div class="small-4 small-centered large-3 large-centered columns extra-space clearfix">
+                <ul class="small-block-grid-1">
                     <li>
                         <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
                         <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV">
@@ -80,19 +80,13 @@
                             src="http://www.jscache.com/wejs?wtype=restaurantWidgetWhite&amp;uniq=525&amp;locationId=2373449&amp;icon=knifeAndFork&amp;lang=it&amp;display_version=2">
                         </script>
                     </li>
-                    <li>
-                        <div class="fb-share-button" data-href="https://facebook.com/cavecchiabeerstrot" data-layout="box_count"></div>
-                        <div id="fb-root"></div>
-                        <script>(function(d, s, id) {var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) return;js = d.createElement(s); js.id = id;js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=1549149915357715";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));
-                        </script>
-                    </li>
-                <ul>
+                </ul>
             </div>
         </div>
     </header>
     <div class="row show-for-small">
-            <div class="small-12 columns extra-space clearfix">
-                <ul class="small-block-grid-2">
+            <div class="small-4 small-centered large-3 large-centered columns extra-space clearfix">
+                <ul class="small-block-grid-1">
                     <li>
                         <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
                         <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV">
@@ -105,13 +99,7 @@
                             src="http://www.jscache.com/wejs?wtype=restaurantWidgetWhite&amp;uniq=525&amp;locationId=2373449&amp;icon=knifeAndFork&amp;lang=it&amp;display_version=2">
                         </script>
                     </li>
-                    <li>
-                        <div class="fb-share-button" data-href="https://facebook.com/cavecchiabeerstrot" data-layout="box_count"></div>
-                        <div id="fb-root"></div>
-                        <script>(function(d, s, id) {var js, fjs = d.getElementsByTagName(s)[0];if (d.getElementById(id)) return;js = d.createElement(s); js.id = id;js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3&appId=1549149915357715";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));
-                        </script>
-                    </li>
-                <ul>
+                </ul>
             </div>
         </div>
 <!-- fine header -->
