--- a/index.html
+++ b/index.html
@@ -85,21 +85,17 @@
         </div>
     </header>
     <div class="row show-for-small">
-            <div class="small-4 small-centered large-3 large-centered columns extra-space clearfix">
-                <ul class="small-block-grid-1">
-                    <li>
-                        <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
-                        <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV">
-                            <li id="z9IAd7Fg" class="477A3RpAP8">
-                                <a class="text-center" target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
-                            </li>
-                        </ul>
-                        </div>
-                        <script
-                            src="http://www.jscache.com/wejs?wtype=restaurantWidgetWhite&amp;uniq=525&amp;locationId=2373449&amp;icon=knifeAndFork&amp;lang=it&amp;display_version=2">
-                        </script>
+            <div class="small-4 small-centered large-3 lcolumns extra-space clearfix">
+                <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
+                <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV small-block-grid-1">
+                    <li id="z9IAd7Fg" class="477A3RpAP8">
+                        <a class="text-center" target="_blank" href="http://www.tripadvisor.it/"><img src="http://www.tripadvisor.it/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
                     </li>
                 </ul>
+                </div>
+                <script
+                    src="http://www.jscache.com/wejs?wtype=restaurantWidgetWhite&amp;uniq=525&amp;locationId=2373449&amp;icon=knifeAndFork&amp;lang=it&amp;display_version=2">
+                </script>
             </div>
         </div>
 <!-- fine header -->
