--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </header>
     <div class="row show-for-small">
-            <div class="small-4 small-centered large-3 columns extra-space clearfix">
+            <div class="small-4 small-centered columns extra-space clearfix">
                 <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
                 <ul id="wbjBD5NTGr" class="TA_links 1N0A9nIakV small-block-grid-1">
                     <li id="z9IAd7Fg" class="477A3RpAP8">
