--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <a role="button" class="button small right extra-space-button" href="http://maps.apple.com/?lsp=9902&auid=2172393922260918433&sll=43.435636,13.377735&q=Ca%27%20Vecchia%20Beerstrot&hnear=Via%20Centofinestre%2020%2C%2060024%20Filottrano%2C%20Ancona%2C%20Italia"><i class="fi-marker" style="font-size:1rem"></i> Dove Siamo</a>
             </div>
         </div>
-        <div class="row extra-space">
-            <div class="small-6 small-centered large-3 large-centered columns extra-space clearfix">
+        <div class="row extra-space hide-for-small">
+            <div class="small-4 small-centered large-3 large-centered columns extra-space clearfix">
                 <ul class="small-block-grid-1">
                     <li>
                         <div id="TA_restaurantWidgetWhite525" class="TA_restaurantWidgetWhite">
