--- a/menu/index.html
+++ b/menu/index.html
@@ -138,7 +138,7 @@
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/lamb.html">Lamb<span class="right">8,8</span></a></h3>    
-                                <p>180 grammi di agnello, germogli di spinaci, salsa allo yogurt</p>
+                                <p>180 grammi di agnello, salsa allo yogurt, rucola</p>
                             </li>
                             <li>
                                 <h3><a href="http://beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">8</span></a></h3>    
