add files and images

--- a/menu/cibo/deciso.html
+++ b/menu/cibo/deciso.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Hamburger | Diablo</title>
+    <title>Beerstrot | Hamburger | Deciso</title>
     <meta name="description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
