--- a/menu/cibo/lamb.html
+++ b/menu/cibo/lamb.html
@@ -5,19 +5,19 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Hamburger | Lamb</title>
-    <meta name="description" content="180 grammi di carne eccezionale, macinata come dio comanda. Agnello tagliato a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto ammorbidendo il sapore forte dell'agnello"/>
+    <meta name="description" content="180 grammi di carne di agnello eccezionale. Tagliata a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto, ammorbidendo il sapore forte dell'agnello"/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Hamburger Lamb"/>
-    <meta name="twitter:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Agnello tagliato a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto ammorbidendo il sapore forte dell'agnello"/>
+    <meta name="twitter:description" content="180 grammi di carne di agnello eccezionale. Tagliata a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto, ammorbidendo il sapore forte dell'agnello"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/lamb.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/lamb.html"/>
     <meta property="og:url" content="http://beerstrot.it/menu/cibo/lamb.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Hamburger Lamb"/>
-    <meta property="og:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Agnello tagliato a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto ammorbidendo il sapore forte dell'agnello"/>
+    <meta property="og:description" content="180 grammi di carne di agnello eccezionale. Tagliata a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto, ammorbidendo il sapore forte dell'agnello"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/lamb.jpg"/>
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/lamb.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
@@ -67,7 +67,7 @@
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Delicato e succoso</h2>
-            <p>180 grammi di carne di agnello eccezionale tagliato a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto, ammorbidendo il sapore forte dell'agnello.</p><p>Servito con patate fritte non surgelate e insalata.</p>
+            <p>180 grammi di carne di agnello eccezionale. Tagliata a mano a mo di tartare. Lo yougurt rende il tutto semplicemente perfetto, ammorbidendo il sapore forte dell'agnello.</p><p>Servito con patate fritte non surgelate e insalata.</p>
             <h2>Con cosa assaggiarlo</h2>
             <p>Gustalo assieme a una APA o una IPA di buon corpo e con finale amaro.</p>  
         </div>
