--- a/menu/index.html
+++ b/menu/index.html
@@ -188,11 +188,11 @@
                         <h2 class="subheader">Menù per bambini</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/lamb.html">Mini Hamburger con patatine<span class="right">6</span></a></h3>    
+                                <h3>Mini Hamburger con patatine<span class="right">6</span></h3>    
                                 <p>100 grammi di manzo, cheddar</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/cheescake.html">Pasta<span class="right">5</span></a></h3>
+                                <h3>Pasta<span class="right">5</span></h3>
                                 <p>Olio extra vergine d'oliva | burro | pomodoro</p>
                             </li>
                         </ul>
