--- a/menu/index.html
+++ b/menu/index.html
@@ -76,39 +76,39 @@
                         <h2 class="subheader ">Per Stuzzicare</h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/peperoncini-e-pancetta.html">Peperoncini e pancetta<span class="right">4,5</span></a></h3>    
+                                <h3>Peperoncini e pancetta<span class="right">4,5</span></h3>    
                                 <p>Peperoncini piccanti avvolti nella pancetta</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/bocconcini-di-pollo.html">Bocconcini di pollo<span class="right">4,5</span></a></h3>    
+                                <h3>Bocconcini di pollo<span class="right">4,5</span></h3>    
                                 <p>Petto di pollo di prima scelta impanato e fritto</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/patatine.html">Patate fritte<span class="right">3,5</span></a></h3>    
+                                <h3>Patate fritte<span class="right">3,5</span></h3>    
                                 <p>Patate fritte con la buccia tagliate a mano</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/patate-al-forno.html">Patate arrosto<span class="right">4</span></a></h3>    
+                                <h3>Patate arrosto<span class="right">4</span></h3>    
                                 <p>Patate al forno con la buccia, aglio, rosmarino e tagliate a mano</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Insalata mista<span class="right">4</span></a></h3>
+                                <h3>Insalata mista<span class="right">4</span></h3>
                                 <p>Verdure di stagione</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Anelli di cipolla<span class="right">3,5</span></a></h3>
+                                <h3>Anelli di cipolla<span class="right">3,5</span></h3>
                                 <p>Cipolla fritta impanata con farina di riso</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Bastoncini di zucchine e melanzane<span class="right">4</span></a></h3>
+                                <h3>Bastoncini di zucchine e melanzane<span class="right">4</span></h3>
                                 <p>Zucchine e melanzane fritte impanate con farina di riso</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Verdure grigliate<span class="right">4,5</span></a></h3>
+                                <h3>Verdure grigliate<span class="right">4,5</span></h3>
                                 <p>Verdure di stagione grigliate con rosmarino</p>
                             </li>
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/salumi.html">Pizzette e focacce<span class="right">2,5</span></a></h3>
+                                <h3>Pizzette e focacce<span class="right">2,5</span></h3>
                                 <p>Pizzette e focacce all'olio di oliva fatte in casa</p>
                             </li>
                         </ul>
