--- a/menu/cibo/new-york.html
+++ b/menu/cibo/new-york.html
@@ -66,10 +66,10 @@
             </header>
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
-            <h2>Piccante e armonioso</h2>
-            <p>Diablo è un hamburger con salsa leggermente piccante, che si amalgama splendidamente con il formaggio cheddar e la pancetta. Un po' di rucola dona freschezza al tutto.</p><p>Servito con patate fritte non surgelate e insalata.</p>
+            <h2>Il più classico degli hamburger</h2>
+            <p>L'Hamburger come lo hai sempre pensato, semplice, succoso e decisamente buono. La cipolla caramellata è dolcissima, il cheddar rende il tutto morbido in bocca.</p><p>Servito con patate fritte non surgelate e insalata.</p>
             <h2>Con cosa assaggiarlo</h2>
-            <p>Gustalo assieme a <a href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html" target="_blank">Breaking Hops Double IPA</a>, o con birre artigianali di buon corpo e con finale amaro.</p>  
+            <p>Gustalo assieme a  con birre artigianali di buon corpo e con finale amaro.</p>  
         </div>
     </div>
 <!-- fine articolo -->
@@ -102,7 +102,7 @@
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
-                <a href="http://beerstrot.it/menu/deciso.html" class="right">Deciso &rarr;</a>
+                <a href="http://beerstrot.it/menu/diablo.html" class="right">Diablo &rarr;</a>
             </div>
         </div> 
     </div>
