--- a/menu/index.html
+++ b/menu/index.html
@@ -154,7 +154,7 @@
                         <h2 class="subheader">Carni <br></h2>
                         <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                             <li>
-                                <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine in Salsa BBQ<span class="right">11,5</span></a></h3>    
+                                <h3><a href="http://beerstrot.it/menu/cibo/costine-in-salsa-bbq.html">Costine in salsa BBQ<span class="right">11,5</span></a></h3>    
                                 <p>Costine di maiale al forno in salsa barbeque servito con patate fritte</p>
                             </li>
                             <li>
