--- a/menu/cibo/costine-in-salsa-bbq.html
+++ b/menu/cibo/costine-in-salsa-bbq.html
@@ -58,7 +58,7 @@
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <h1>Costine in Salsa BBQ</h1>
+                        <h1>Costine in salsa BBQ</h1>
                         <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 10 Aprile 2015</h6>
                         <h6 class="by-line">foto <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                     </div>
