--- a/menu/cibo/new-york.html
+++ b/menu/cibo/new-york.html
@@ -67,7 +67,7 @@
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Il più classico degli hamburger</h2>
-            <p>L'Hamburger come lo hai sempre pensato, semplice, succoso e decisamente buono. La cipolla caramellata è dolcissima, il cheddar rende il tutto morbido in bocca.</p><p>Servito con patate fritte non surgelate e insalata.</p>
+            <p>L'Hamburger come lo hai sempre pensato. Semplice, succoso e decisamente buono. La cipolla caramellata è dolcissima, il cheddar rende il tutto morbido in bocca.</p><p>Servito con patate fritte non surgelate e insalata.</p>
             <h2>Con cosa assaggiarlo</h2>
             <p>Gustalo assieme a  con birre artigianali di buon corpo e con finale amaro.</p>  
         </div>
