--- a/menu/cibo/new-york.html
+++ b/menu/cibo/new-york.html
@@ -102,7 +102,7 @@
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
-                <a href="http://beerstrot.it/menu/diablo.html" class="right">Diablo &rarr;</a>
+                <a href="http://beerstrot.it/menu/cibo/diablo.html" class="right">Diablo &rarr;</a>
             </div>
         </div> 
     </div>
