--- a/menu/cibo/estivo.html
+++ b/menu/cibo/estivo.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
-    <title>Beerstrot | Hamburger | Diablo</title>
-    <meta name="description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
+    <title>Beerstrot | Hamburger | Estivo</title>
+    <meta name="description" content="180 grammi di carne eccezionale, macinata come dio comanda. Fresco e con carattere"/>
     <meta name="author" content="Giulia Mazza"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2015"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Hamburger Diablo"/>
+    <meta name="twitter:title" content="Hamburger Estivo"/>
     <meta name="twitter:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
-    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/diablo.jpg"/>
-    <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/diablo.html"/>
-    <meta property="og:url" content="http://beerstrot.it/menu/cibo/diablo.html"/>
+    <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/estivo.jpg"/>
+    <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/estivo.html"/>
+    <meta property="og:url" content="http://beerstrot.it/menu/cibo/estivo.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Hamburger Diablo"/>
+    <meta property="og:title" content="Hamburger Estivo"/>
     <meta property="og:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
-    <meta property="og:image" content="http://beerstrot.it/asset/img/large/diablo.jpg"/>
-    <link rel="canonical" href="http://beerstrot.it/menu/cibo/diablo.html"/>
+    <meta property="og:image" content="http://beerstrot.it/asset/img/large/estivo.jpg"/>
+    <link rel="canonical" href="http://beerstrot.it/menu/cibo/estivo.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -52,13 +52,13 @@
     </nav>
 <!-- fine navbar con hamburger -->
 <!-- inizio articolo -->
-    <img class="image-hero" src="http://beerstrot.it/asset/img/large/diablo.jpg" alt="Hamburger Diablo"/>
+    <img class="image-hero" src="http://beerstrot.it/asset/img/large/estivo.jpg" alt="Hamburger Estivo"/>
     <div class="row">
         <aside class="medium-5 large-4 columns">
            <header>
                 <div class="row">
                     <div class="medium-12 large-12 columns">
-                        <h1>Hamburger Diablo</h1>
+                        <h1>Hamburger Estivo</h1>
                         <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 27 Maggio 2015</h6>
                         <h6 class="by-line">foto <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                     </div>
@@ -67,7 +67,7 @@
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
             <h2>Piccante e armonioso</h2>
-            <p>Diablo è un hamburger con salsa leggermente piccante, che si amalgama splendidamente con il formaggio cheddar e la pancetta. Un po' di rucola dona freschezza al tutto.</p><p>Servito con patate fritte non surgelate e insalata.</p>
+            <p>Estivo è un hamburger con salsa leggermente piccante, che si amalgama splendidamente con il formaggio cheddar e la pancetta. Un po' di rucola dona freschezza al tutto.</p><p>Servito con patate fritte non surgelate e insalata.</p>
             <h2>Con cosa assaggiarlo</h2>
             <p>Gustalo assieme a <a href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html" target="_blank">Breaking Hops Double IPA</a>, o con birre artigianali di buon corpo e con finale amaro.</p>  
         </div>
@@ -83,13 +83,13 @@
                 <div class="small-6 medium-4 large-4 columns extra-space-share-icon">
                     <ul class="block-grid-social-3">
                         <li>
-                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/birra/diablo.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
+                            <span><a class="fi-social-facebook icon-font-style" href="javascript:window.open('https://www.facebook.com/sharer/sharer.php?u=http://beerstrot.it/menu/cibo/estivo.html', 'Share on Facebook', 'width=650, height=280');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/birra/diablo.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
+                            <span><a class="fi-social-twitter icon-font-style" href="javascript:window.open('https://twitter.com/home?status=http://beerstrot.it/menu/cibo/estivo.html', 'Share on Twitter', 'width=550, height=460');"></a></span>
                         </li>
                         <li>
-                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/birra/diablo.html', 'Share on Google+', 'width=650, height=600');"></a></span>
+                            <span><a class="fi-social-google-plus icon-font-style" href="javascript:window.open('https://plus.google.com/share?url=http://beerstrot.it/menu/cibo/estivo.html', 'Share on Google+', 'width=650, height=600');"></a></span>
                         </li>
                     </ul>
                 </div>
