--- a/menu/cibo/estivo.html
+++ b/menu/cibo/estivo.html
@@ -11,13 +11,13 @@
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
     <meta name="twitter:title" content="Hamburger Estivo"/>
-    <meta name="twitter:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
+    <meta name="twitter:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Fresco e con carattere"/>
     <meta name="twitter:image" content="http://beerstrot.it/asset/img/large/estivo.jpg"/>
     <meta name="twitter:url" content="http://beerstrot.it/menu/cibo/estivo.html"/>
     <meta property="og:url" content="http://beerstrot.it/menu/cibo/estivo.html"/>
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Hamburger Estivo"/>
-    <meta property="og:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Leggermente piccante con un gusto estremamente delicato"/>
+    <meta property="og:description" content="180 grammi di carne eccezionale, macinata come dio comanda. Fresco e con carattere"/>
     <meta property="og:image" content="http://beerstrot.it/asset/img/large/estivo.jpg"/>
     <link rel="canonical" href="http://beerstrot.it/menu/cibo/estivo.html"/>
     <link rel="stylesheet" href="http://beerstrot.it/css/app.css"/>
@@ -59,17 +59,17 @@
                 <div class="row">
                     <div class="medium-12 large-12 columns">
                         <h1>Hamburger Estivo</h1>
-                        <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 27 Maggio 2015</h6>
+                        <h6 class="by-line">Scritto da <a href="http://beerstrot.it/chi-siamo/team/giulia-mazza.html">Giulia Mazza</a> <br>il 1 Giugno 2015</h6>
                         <h6 class="by-line">foto <a href="http://beerstrot.it/chi-siamo/team/andrea-tagliazucchi.html">Andrea Tagliazucchi</a></h6>
                     </div>
                 </div>
             </header>
         </aside>
         <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content">
-            <h2>Piccante e armonioso</h2>
-            <p>Estivo è un hamburger con salsa leggermente piccante, che si amalgama splendidamente con il formaggio cheddar e la pancetta. Un po' di rucola dona freschezza al tutto.</p><p>Servito con patate fritte non surgelate e insalata.</p>
+            <h2>Fresco e con carattere</h2>
+            <p>180 grammi di carne eccezionale. Melanzane freschissime grigliate alla perfezione. Caprino deciso e con molto carattere. La rucola rinfresca il tutto. Hamburger per gli amanti dei sapori forti e decisi.</p><p>Servito con patate fritte non surgelate e insalata.</p>
             <h2>Con cosa assaggiarlo</h2>
-            <p>Gustalo assieme a <a href="http://beerstrot.it/menu/birra/breaking-hops-double-ipa.html" target="_blank">Breaking Hops Double IPA</a>, o con birre artigianali di buon corpo e con finale amaro.</p>  
+            <p>Gustalo assieme a birre artigianali belghe o alla mitica Ape Regina del birrificio <a href="http://www.mc-77.com" target="_blank">MC-77</a>.</p>  
         </div>
     </div>
 <!-- fine articolo -->
