--- a/menu/cibo/estivo.html
+++ b/menu/cibo/estivo.html
@@ -69,7 +69,7 @@
             <h2>Fresco e con carattere</h2>
             <p>180 grammi di carne eccezionale. Melanzane freschissime grigliate alla perfezione. Caprino deciso e con molto carattere. La rucola rinfresca il tutto. Hamburger per gli amanti dei sapori forti e decisi.</p><p>Servito con patate fritte non surgelate e insalata.</p>
             <h2>Con cosa assaggiarlo</h2>
-            <p>Gustalo assieme a birre artigianali belghe o alla mitica <a href="http://beerstrot.it/menu/birra/ape-regina.html">Ape Regina</a> del birrificio <a href="http://www.mc-77.com" target="_blank">MC-77</a>.</p>  
+            <p>Gustalo assieme a birre artigianali belghe o alla mitica <a href="http://beerstrot.it/menu/birra/ape-regina.html" target="_blank">Ape Regina</a> del birrificio <a href="http://www.mc-77.com" target="_blank">MC-77</a>.</p>  
         </div>
     </div>
 <!-- fine articolo -->
