--- a/menu/cibo/cheescake.html
+++ b/menu/cibo/cheescake.html
@@ -102,6 +102,7 @@
         <div class="medium-7 medium-push-5 large-8 large-push-4 columns">
             <div class="clearfix">
                 <a href="http://beerstrot.it/menu/#fndtn-cibo" class="left">&larr; Torna al menu</a>
+                <a href="http://beerstrot.it/menu/cibo/birramisu" class="right">Birramisù &rarr;</a>
             </div>
         </div> 
     </div>
